Test/dafny0/ModuleInsertionErrors.dfy.expect
ModuleInsertionErrors.dfy(23,11): Error: Duplicate module name: B
ModuleInsertionErrors.dfy(24,11): Error: Duplicate module name: N
ModuleInsertionErrors.dfy(30,17): Error: Duplicate module name: O
3 resolution/type errors detected in ModuleInsertionErrors.dfy
